Improved header spacing, accessbility, and fix blue background for theme/details header

--- a/components/front/connectivity.module.css
+++ b/components/front/connectivity.module.css
@@ -7,11 +7,6 @@
     width: 250px;
 }
 
-@media only screen and (max-width: 768px) {
-    .connectivity hr::before {
-        width: 100%;
-    }
-}
 
 .connectivity {
     width: 80vw;
@@ -27,12 +22,23 @@
 }
 
 .connectivity h2 {
-    font-size: calc(20px + 2vw);
-    line-height: 4vw;
-    display: inline;
-    color: var(--blue);
-    font-weight: bold;
+    font-size: calc(20px + 4vw);
+    line-height: 8vw;
     text-transform: uppercase;
-    letter-spacing: 1.5px;
-    margin-left: 5vw;
+    margin: 0;
+    background-image: url('../../images/blueback.png');
+    background-repeat: no-repeat;
+    background-position-y: 80%;
+    word-wrap: break-word;
 }
+
+@media only screen and (max-width: 768px) {
+    .connectivity hr::before {
+        width: 100%;
+    }
+
+    .connectivity h2 {
+        padding: var(--gap) var(--gap-half);
+    }
+}
+
